# incremental_clicker

./: CMakeLists.txt  main.cpp
cmake/: CPM.cmake  fetch-entt.cmake  fetch-googletest.cmake  fetch-json.cmake  fetch-raylib.cmake
src/: CMakeLists.txt  clicker_app.cpp  clicker_app.hpp  core.hpp  generator.hpp  raylib_context.cpp  raylib_context.hpp
src/kernel/: amount.hpp  automated_production.hpp  bignum.cpp  bignum.hpp  enums.hpp  generator.hpp  generator_map.hpp  persistence.hpp  scheduler.hpp
src/tavern/domain/entities/: tavern.hpp
src/town/application/: tavern_service.hpp
src/town/domain/entities/: tavern.hpp
src/town/domain/ports/primary/: tavern_service_port.hpp
src/town/domain/ports/secondary/: tavern_repository.hpp
src/town/domain/valueobjects/: gold.hpp
src/town/infrastructure/adapters/primary/: raylib_tavern_service_adapter.hpp
src/town/infrastructure/adapters/secondary/: entt_tavern_repository_adapter.hpp
